@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-09T08:30:49Z",
+  "timestamp" : "2022-11-09T16:32:43Z",
   "count_outdated" : 613,
   "uniques_outdated" : 389,
-  "count" : 628,
+  "count" : 627,
   "uniques" : 397,
   "clones" : [
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
