@@ -1,10 +1,10 @@
 {
-  "count": 15,
+  "count": 14,
   "uniques": 1,
   "clones": [
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
