@@ -1,3 +1,11 @@
+2022-11-09T16:32:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3429987556 # 598
+* notice: last 14d: unq all: 1 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 389 613 / 397 628
+* notice: next accum: outdated-unq outdated-all / unq all: 389 613 / 397 627
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-10-26]
+
 2022-11-09T08:30:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3426515332 # 597
 * notice: last 14d: unq all: 1 15
